Add ability to roll all die in a game

--- a/first_roll.html
+++ b/first_roll.html
@@ -30,7 +30,7 @@
         <!-- Invite friends -->
         
         <!-- Roll all dice -->
-        <!-- <input type="button" class="roll-all one columns" value="#" /> -->
+        <input type="button" class="roll-all one columns" value="#" />
         {{/each}}
     </div>  
 </template>
