Update Dice sides with selector, Update Game name with form on change

--- a/first_roll.html
+++ b/first_roll.html
@@ -38,8 +38,7 @@
             {{error}} 
           </span>
         {{/if}}
-        <input id="update_game_name" class=" " type="text" placeholder="{{name}}" />
-        <input type="button" class="change-name" value="/" />
+        <input id="update_game_name" type="text" placeholder="{{name}}" />
         <!-- Invite friends -->
         
         <!-- Roll all dice -->
