--- a/first_roll.html
+++ b/first_roll.html
@@ -1,7 +1,6 @@
 <head>
   <title>first_roll</title>
-  <!-- <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" /> -->
-  <!-- <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script> -->
+  <script src="/jquery.touchSwipe.min.js"></script>
 </head>
 
 <body>
@@ -28,7 +27,7 @@
 </template>
 
 <template name="currentgame">
-    <div class="currentgame single-die">
+    <div class="currentgame">
         {{#each games}}
         <input type="button" class="exit-game" value="Exit" />
         <h3 class="four columns">Your game is called:</h3>
@@ -58,9 +57,9 @@
 </template>
 
 <template name="die">
-    <div class="single-die {{type}}">
+    <div class="single-die clearfix {{type}}">
         <input type="button" class="delete-die" value="X">
-        <p class="three columns">Date: {{rolled}}</p>
+        <p class="sides">Number of sides:</p>
         <select id="{{_id}}" class="side-selector">
           <option value="2">Coin Flip</option>
           <option value="3">3</option>
@@ -91,7 +90,7 @@
           <option value="28">28</option>
           <option value="29">29</option>
         </select>
-        <p class="three columns {{type}}">{{result}}</p>
+        <p class="result {{type}}">{{result}}</p>
         <input type="button" class="roll" value="Roll">
     </div>
 </template>
