--- a/first_roll.html
+++ b/first_roll.html
@@ -78,7 +78,7 @@
 </template>
 
 <template name="die">
-    <div class="single-die clearfix {{type}}">
+    <div class="single-die clearfix">
         <div class="die-wrap clearfix" data-id="{{_id}}">
             <p class="sides">Number of sides:</p>
             <select id="{{_id}}" class="side-selector">
