Style updates to dice game header and add die

--- a/public/die_options.html
+++ b/public/die_options.html
@@ -26,7 +26,7 @@
     
 </style>
 <link rel="stylesheet" href="die.css" type="text/css" media="screen" title="no title" charset="utf-8">
-    
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 
@@ -81,12 +81,14 @@
             </select>
             <p class="arrow"></p>
             <div class="result">
-                <p class="d2">6</p>
+                <div class="d10">
+                    <p>6</p>
+                </div>
             </div>
         </div>
         <div class="delete-roll clearfix">
-        <input type="button" class="delete-die" value="Delete»»">
-        <input type="button" class="roll" value="««Roll It">
+            <input type="button" class="delete-die" value="Delete»»">
+            <input type="button" class="roll" value="««Roll It">
         </div>
     </div>
 
@@ -124,14 +126,17 @@
               <option value="29">29</option>
             </select>
             <p class="arrow"></p>
-            <p class="result d6">6</p>
+            <div class="result">
+                <div class="d4">
+                    <p>6</p>
+                </div>
+            </div>
         </div>
         <div class="delete-roll clearfix">
-        <input type="button" class="delete-die" value="Delete»»">
-        <input type="button" class="roll" value="««Roll It">
+            <input type="button" class="delete-die" value="Delete»»">
+            <input type="button" class="roll" value="««Roll It">
         </div>
     </div>
-</div> 
 
 <div class="newdie ">
     <input type="button" class="generate-die" value="Add another Die">
