--- a/first_roll.html
+++ b/first_roll.html
@@ -1,6 +1,7 @@
 <head>
   <title>first_roll</title>
   <script src="/jquery.touchSwipe.min.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -54,19 +55,18 @@
 <template name="currentgame">
     <div class="currentgame">
         {{#each games}}
-        <a class="exit-game" href="{{pathFor 'home'}}">Exit</a>
-        <h3 class="four columns">Your game is called:</h3>
-        <!-- Change the game name -->
-        {{#if error}}
-          <span id="error bad-update-name">
-            {{error}} 
-          </span>
-        {{/if}}
-        <input id="update-game-name" type="text" placeholder="{{slug}}" />
-        <!-- Invite friends -->
-        
-        <!-- Roll all dice -->
-        <input type="button" class="roll-all" value="#" />
+        <div class="game-header">
+            <a class="exit-game" href="{{pathFor 'home'}}">Exit</a>
+            <h3 class="">Your game is called:</h3>
+            {{#if error}}
+              <span class="error" id="bad-update-name">
+                {{error}} 
+              </span>
+            {{/if}}
+            <input id="update-game-name" type="text" placeholder="{{slug}}" />
+            <!-- Invite friends -->
+            <input type="button" class="roll-all" value="Roll All" />
+        </div>
         {{/each}}
         {{#each dice}}
           {{> die}}
@@ -79,7 +79,7 @@
 <template name="die">
     <div class="single-die clearfix">
         <div class="die-wrap clearfix" data-id="{{_id}}">
-            <p class="sides">{{game}}</p>
+            <p class="sides">Sides:</p>
             <select id="{{_id}}" class="side-selector">
               <option value="2">Coin Flip</option>
               <option value="3">3</option>
@@ -110,6 +110,7 @@
               <option value="28">28</option>
               <option value="29">29</option>
             </select>
+            <p class="arrow"></p>
             <p class="result {{type}}">{{result}}</p>
         </div>
         <div class="delete-roll clearfix">
@@ -133,7 +134,7 @@
 
 <template name="notFound">
     <div class="not-found">
-        <h1>Loading...</h1>
+        <h1>Not Found</h1>
     </div>
 </template>
 
