Minor update to creating dice

--- a/first_roll.html
+++ b/first_roll.html
@@ -43,7 +43,7 @@
     <div class="enter-game">
         <p>OR</p>
         {{#if error}}
-          <p class="error bad-entry">
+          <p class="error" id="bad-entry">
             {{error}} 
           </p>
         {{/if}}
