Styling the dice

--- a/first_roll.html
+++ b/first_roll.html
@@ -1,7 +1,7 @@
 <head>
   <title>first_roll</title>
   <script src="/jquery.touchSwipe.min.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Cinzel:700|Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -22,8 +22,8 @@
 <template name="home">
     <div class="home">
         <h2>Roll dice with friends!</h2>
-        <p>Using <span>APPNAME</span> you can create and share virtual dice with friends. Dice rolled on one player's device automatically update every other players' screen.</p>
-        <p>Lost your dice for <em>Risk</em>? Want to start an epic game of D&amp;D?</p>
+        <p class="intro">Using <span>APPNAME</span> you can create and share virtual dice with friends. Dice rolled on one player's device automatically update every other players' screen.</p>
+        <p class="intro">Lost your dice for <em>Risk</em>? Want to start an epic game of D&amp;D?</p>
         {{#if nogame}}
           <p class="error bad-url">Sorry! There was no game called "{{nogame}}."
           </p>
@@ -47,7 +47,7 @@
             {{error}} 
           </p>
         {{/if}}
-        <input id="enter-game-name" type="text" placeholder="Join an Existing Game!" />
+        <input id="enter-game-name" type="text" placeholder="Join a Live Game!" />
         <input type="button" class="enter-game" value="»">
     </div>
 </template>
@@ -55,7 +55,7 @@
 <template name="currentgame">
     <div class="currentgame">
         {{#each games}}
-        <div class="game-header">
+        <div class="game-header clearfix">
             <a class="exit-game" href="{{pathFor 'home'}}">Exit</a>
             <h3 class="">Your game is called:</h3>
             {{#if error}}
@@ -79,43 +79,43 @@
 <template name="die">
     <div class="single-die clearfix">
         <div class="die-wrap clearfix" data-id="{{_id}}">
-            <p class="sides">Sides:</p>
-            <select id="{{_id}}" class="side-selector">
-              <option value="2">Coin Flip</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-              <option value="6">6</option>
-              <option value="7">7</option>
-              <option value="8">8</option>
-              <option value="9">9</option>
-              <option value="10">10</option>
-              <option value="11">11</option>
-              <option value="12">12</option>
-              <option value="13">13</option>
-              <option value="14">14</option>
-              <option value="15">15</option>
-              <option value="16">16</option>
-              <option value="17">17</option>
-              <option value="18">18</option>
-              <option value="19">19</option>
-              <option value="20">20</option>
-              <option value="21">21</option>
-              <option value="22">22</option>
-              <option value="23">23</option>
-              <option value="24">24</option>
-              <option value="25">25</option>
-              <option value="26">26</option>
-              <option value="27">27</option>
-              <option value="28">28</option>
-              <option value="29">29</option>
-            </select>
-            <p class="arrow"></p>
-            <p class="result {{type}}">{{result}}</p>
-        </div>
-        <div class="delete-roll clearfix">
-        <input type="button" class="delete-die" value="Delete»»">
-        <input type="button" class="roll" value="««Roll It">
+                            <p class="sides">Sides:</p>
+                            <select id="{{_id}}" class="side-selector">
+                              <option value="2">Coin Flip</option>
+                              <option value="3">3</option>
+                              <option value="4">4</option>
+                              <option value="5">5</option>
+                              <option value="6">6</option>
+                              <option value="7">7</option>
+                              <option value="8">8</option>
+                              <option value="9">9</option>
+                              <option value="10">10</option>
+                              <option value="11">11</option>
+                              <option value="12">12</option>
+                              <option value="13">13</option>
+                              <option value="14">14</option>
+                              <option value="15">15</option>
+                              <option value="16">16</option>
+                              <option value="17">17</option>
+                              <option value="18">18</option>
+                              <option value="19">19</option>
+                              <option value="20">20</option>
+                              <option value="21">21</option>
+                              <option value="22">22</option>
+                              <option value="23">23</option>
+                              <option value="24">24</option>
+                              <option value="25">25</option>
+                              <option value="26">26</option>
+                              <option value="27">27</option>
+                              <option value="28">28</option>
+                              <option value="29">29</option>
+                            </select>
+                            <p class="arrow"></p>
+                            <p class="result {{type}}">{{result}}</p>
+                        </div>
+        <div class="delete-roll">
+            <input type="button" class="delete-die" value="Delete»»">
+            <input type="button" class="roll" value="««Roll It">
         </div>
     </div>
 </template>
