Basic Not Found Template

--- a/first_roll.html
+++ b/first_roll.html
@@ -134,7 +134,9 @@
 
 <template name="notFound">
     <div class="not-found">
-        <h1>Not Found</h1>
+        <h2>There's nothing on this page</h2>
+        {{> newgame}}
+        {{> entergame}}
     </div>
 </template>
 
