Update to 0.8.0; integrate blaze

--- a/first_roll.html
+++ b/first_roll.html
@@ -25,7 +25,7 @@
 
 <template name="layout">
     <div class="page-wrap clearfix">
-    {{{yield}}}
+    {{> yield }}
     </div>
   <footer>
       <div class="self-promo">
